# small-datasets

./: LICENSE  README.md  pyproject.toml
data/: README.md
