[tool.poetry]
name = "small-datasets"
version = "0.1.0"
description = ""
authors = ["NickOsipov <nick.osipov.91@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
invoke = "2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
